<resources>
    <string name="instr"><i><b>Selecciona un técnico de la lista para poder iniciar la sesión con su perfil</b></i></string>
    <string name="app_name">AT Services</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="title_activity_registro">Registro de Devolución</string>
    <string name="title_activity_menu__devolucion">Menú de Devolucion</string>
    <string name="title_activity_lista__devolucion">Lista de Devoluciones</string>
    <string name="title_reporte_devoluciones">Menú de Reportes</string>
    <string name="title_registro_memorias">Registro de Memorias</string>
    <string name="title_devolucion_memorias">Reporte de Memorias</string>
    <string name="error_field_required">El mensaje esta vacio </string>
    <string name="error_permission_requred">Se necesitan permisos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ingresar">Ingresar</string>
    <string name="hintBusqueda"><i>Ingresa una palabra de búsqueda</i></string>
    <string name="infoDialogoBusqueda"><b><i>Ingresa una palabra de búsqueda, y oprime el boton buscar (lupa)
        , y a continuación elige el técnico que corresponda a tu búsqueda.</i></b></string>
    <string name="generarDevolucion">Devolución de Material</string>
    <string name="reporteDevoluciones">Reporte de Devoluciones</string>
    <string name="menuInicial">Selecciona una opción</string>
    <string name="devolucionMemorias">Devolución de Memorias</string>
    <string name="pedidos">Pedidos</string>
    <string name="foliosPendientes">Folios Pendientes</string>
    <string name="adeudoMaterial">Adeudo de Material</string>
    <string name="osAsignadas">OS Asignadas</string>
    <string name="DevolverMemorias">Devolucion de Memorias</string>
    <string name="materiales">Materiales</string>
    <string name="salida">SALIDA</string>
    <string name="enviar">Enviar</string>
    <string name="infoEditar"><i>Toca un elemento de la lista para editarlo si así lo requieres.
        En No. Guía, toca el taxi o mensaje si no dispones de tal número</i></string>
    <string name="usuario">Usuario</string>
    <string name="usuarioDots">Usuario:</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasenaDots">Contraseña:</string>
    <string name="crearListaDev">CREAR LISTA DE DEVOLUCIÓN</string>
    <string name="sala">Sala:</string>
    <string name="crear">Crear</string>
    <string name="region">Región</string>
    <string name="tipoDeDev">Tipo de devolución</string>
    <string name="salidaNO">Salida NO.</string>
    <string name="codigo">Código:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="serie">Serie:</string>
    <string name="verLista">Ver Lista</string>
    <string name="descripcion">Descripción</string>
    <string name="escaner">Escáner</string>
    <string name="tvDescripcion"><i>Esperando descripción de la pieza...</i></string>
    <string name="hintSeisDigitos"><i>Ingresa 6 dígitos</i></string>
    <string name="hintPedido"><i>Ingresa Pedido u Os</i></string>
    <string name="hintNoGuia"><i>Ingresa el No. de guía</i></string>
    <string name="pedido">Pedid</string>
    <string name="noGuia">No. Guía:</string>
    <string name="verificarPedido">Verificar</string>
    <string name="reporteDeDevoluciones">Reportes de Devoluciones</string>
    <string name="seleccionaSala">Selecciona una sala</string>
    <string name="seleccionaSalida">Selecciona un número de salida</string>
    <string name="devolucionesReporte">Devoluciones con los datos seleccionados</string>
    <string name="CODIGO">CODIGO</string>
    <string name="DESCRIPCION">DESCRIPCIÓN</string>
    <string name="CANTIDAD">CANTIDAD</string>
    <string name="SERIE">SERIE</string>
    <string name="title_lista_de_devoluciones">Lista de Devoluciones</string>
    <string name="mostrarMas">Mostrar Más</string>
    <string name="TIPO">TIPO</string>
    <string name="FOLIO">FOLIO</string>
    <string name="OS">OS</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string-array name="Memorias">
        <item>USB</item>
        <item>Compact Juegos</item>
        <item>Key Pack</item>
        <item>Lector</item>
        <item>Compact</item>
    </string-array>
    <string-array name="Tecnicos">
        <item>SELECCIONA UN TÉCNICO...</item>
        <item>Gervacio Cerón     - PUEBLA/VERACRUZ</item>
        <item>Miguel Campos      - MONTERREY</item>
        <item>Nayeli Malagón     - PENINSULA</item>
        <item>Herli Castañeda    - DFZ1</item>
        <item>Guillermo López    - CENTRO</item>
        <item>Brenda Patricia Martell - GUADALAJARA</item>
        <item>Juan Luis Vera     - DFZ2</item>
        <item>Juan Mancilla      - PACIFICO</item>
        <item>Alfonso Vargas     - TIJUANA</item>
    </string-array>
    <string-array name="Opciones">
        <item>ORDINARIA</item>
        <item>BAJA</item>
    </string-array>
    <string name="title_Folios_Pendientes">Folios Pendientes</string>
    <string name="afp_hintIngresaFolio"><i>No. Folio</i></string>
    <string name="afp_Asignar">Asignar</string>
    <string name="afp_FoliosPorSala">Folios Por Sala</string>
    <string name="afp_info"><i><b>En No. Folio, sólo ingresa el número existente entre los guiones del
         número de incidencia</b></i></string>
    <string name="title_reporte_folio_pendiente">Reporte Folio Pendiente</string>
    <string name="rfp_AceptarFolio">Aceptar Folio</string>
    <string name="rfp_RechazarFolio">No Aceptar Folio</string>
    <string name="rfp_Folio">Folio</string>
    <string name="rfp_Sala">Sala</string>
    <string name="rfp_Falla">Falla</string>
    <string name="rfp_SubFalla">Subfalla</string>
    <string name="rfp_Licencia">Licencia</string>
    <string name="rfp_Juego">Juego</string>
    <string name="rfp_Opciones">Actividades</string>
    <string name="rfp_Traslado">Traslado a Sala</string>
    <string name="rfp_Acceso">Acceso a Sala</string>
    <string name="rfp_Atiende">Atiende Incidencia</string>
    <string name="rfp_Estatus">Estatus Incidencia</string>
    <string name="rfp_Repara">Repara Incidencia</string>
    <string name="mq_maquinas_documentacion">Maquinas</string>
    <string name="mq_vista_frontal">Alineación de isla vista frontal</string>
    <string name="mq_vista_lateral">Alineación de isla vista lateral</string>
    <string name="mq_alineacion_posapies">Alineación de reposapiés</string>
    <string name="mq_espacio_entre_maquinas">Espacio entre máquinas</string>
    <string name="mq_peinado_general_isla">Peinado general de isla</string>
    <string name="mq_finales_isla">Finales de isla</string>
    <string name="mq_vista_frontal_d_i">Vista frontal (derecha e/o izquierda)</string>
    <string name="mq_vista_lateral_d_i">Vista lateral (derecha e/o izquierda)</string>
    <string name="mq_sign">Sign</string>
    <string name="mq_sign_alineacion">Alineación del sign con respecto a la isla</string>
    <string name="mq_sign_pantallas">Alineación de pantallas</string>
    <string name="mq_estabilizadoes">Estabilizadores</string>
    <string name="mq_site">Site</string>
    <string name="mq_peinado_rack">Peinado de rack</string>
    <string name="mq_operacion_APC">Operación de APC</string>
    <string name="title_estatus_incidencia">Estatus de Incidencia</string>
    <string name="aei_refaccion">Refacción</string>
    <string name="aei_codigosDeError">Códigos de Error</string>
    <string name="aei_CodigosdeActivacion">Códigos De Activación</string>
    <string name="aei_SistemadeCaja">Sistema de Caja</string>
    <string name="aei_SolucionDeSala">Solución de Sala</string>
    <string name="ePendiente">Pendiente</string>
    <string name="eCancelado">Cancelado</string>
    <string name="eParcial">Parcial</string>
    <string name="eSinExistencia">Sin Existencia</string>
    <string name="eCompleto">Completo</string>
    <string name="addcoment">Añadir</string>
    <string name="hintComent"><i><b>Escribe Comentarios</b></i></string>
    <string name="finalizarActividad">Finalizar Actividad</string>
    <string name="aios_act">Actividad</string>
    <string name="aios_fecInic">Inicio</string>
    <string name="aios_finAct">Fin</string>
    <string name="error_entrega"><b><i>Toca para guardar comentario en servidor</i></b></string>
    <string name="entregado"><b><i>Entregado</i></b></string>
    <string name="aet_Estatus">Estatus</string>
    <string name="aet_Tiempo">Tiem. Act.</string>
    <string name="e_mailIncorrecto">No tienes tu e-mail asociado al sistema\nIngresa con tu usuario y contraseña que se asigno...</string>
    <string name="usuarioIncorrecto">Nombre de usuario o password incorrectos</string>
    <string name="titClientProtExc">Client Protocol Exception</string>
    <string name="titJsonException">Error de conexión con servidor remoto</string>
    <string name="cuerpoJsonException">Error de conexión con servidor remoto</string>
    <string name="cuerpoIOexception">No hay conexión eficiente a Internet\nPrueba reiniciando el WiFi o Datos Móviles del celular; o inclusive reiniciando el equipo</string>
    <string name="titIOexception">Sin conexión de Red</string>
    <string name="titIllegalArgExcep">Illegal Argument Exception</string>
    <string name="cuerpoIllegalArgExcep">El nombre de usuario o contraseña contiene caractéres no válidos</string>
    <string name="conectando">Conectando con servidor...\nEspera por favor</string>
    <string name="sinInternet">El equipo no tiene acceso internet</string>
    <string name="titActDisp">Nueva Actualización Disponible</string>
    <string name="cuerpoActDisp">Hay una nueva actualización disponible de Devolución de Material. La versión de la que dispones ahora es posible que sea obsoleta y no funcione adecuadamente.</string>
    <string name="descargar">Descargar</string>
    <string name="notCall">No se pudo realizar la llamada.</string>
    <string name="pedidosPorSala">Pedidos Por sala</string>
    <string name="pedidosPorIncidencia">Pedidos Por Incidencia</string>
    <string name="crear_pedido">Crear Pedido</string>
    <string name="solicitud_de_material">Solicitud De Material</string>
    <string name="seleccionaOpcion">Selecciona Una Opción</string>
    <string name="devMat">Devolución De Material</string>
    <string name="adMat">Adeudo de Material</string>
    <string name="repdev">Reporte de Devoluciones</string>
    <string name="bienvenido">¡Bienvenido\u0020</string>
    <string name="sinRegistros">Sin Registros</string>
    <string name="sinIncidencias">No Hay Incidencias Pendientes Registradas</string>
    <string name="campoVacio">El Campo Está Vacío...</string>
    <string name="infoAsigFol">Se asigna el folio, pero tiene actividades registradas</string>
    <string name="infoAsignado">Se ha asignado el folio\u0020</string>
    <string name="infoFolioInex">El número de folio no existe</string>
    <string name="incidencia">La incidencia\u0020</string>
    <string name="atendida">\u0020ya ha sido atendida</string>
    <string name="estActualizado">Estatus Actualizado Correctamente</string>
    <string name="aceptar">Aceptar</string>
    <string name="actRegistrada">La actividad ha sido registrada</string>
    <string name="actRegAnt">Ésta actividad ya ha sido registrada anteriormente</string>
    <string name="regBaja">Se han registrado los datos del técnico para la baja</string>
    <string name="notRegBaja">No se ha podido obtener los datos del técnico. Inténtalo de nuevo</string>
    <string name="infoEstEnSer">Te muestra disponible para que te asignen actividades</string>
    <string name="lista_pedidos">Lista pedidos</string>
    <string name="adjuntar">Adjuntar</string>
</resources>