<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/etcodigoEdit"
        style="@style/EditTextStyleRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtcodigo"
        android:layout_alignBottom="@+id/txtcodigo"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/txtcantidad"
        android:ems="3"
        android:hint="@string/hintSeisDigitos"
        android:inputType="number" />

    <EditText
        android:id="@+id/etcantidadEdit"
        style="@style/EditTextStyleRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtcantidad"
        android:layout_alignLeft="@+id/etcodigoEdit"
        android:layout_alignRight="@+id/etcodigoEdit"
        android:ems="1"
        android:enabled="true"
        android:numeric="integer" />

    <EditText
        android:id="@+id/etserieEdit"
        style="@style/EditTextStyleRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtserie"
        android:layout_alignBottom="@+id/txtserie"
        android:layout_alignLeft="@+id/etcantidadEdit"
        android:layout_alignRight="@+id/etcantidadEdit"
        android:ems="3"
        android:enabled="true" />

    <TextView
        android:id="@+id/txtserie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtcantidad"
        android:layout_below="@+id/txtcantidad"
        android:layout_marginTop="40dp"
        android:text="@string/serie"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/frag_body_id_ly_cont_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etserieEdit"
        android:layout_below="@+id/etserieEdit"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btEditar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonStyleGris"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btnCancelarEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonStyleGris"
            android:layout_marginLeft="5dp"
            android:text="@string/cancelar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtcantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtcodigo"
        android:layout_below="@+id/etcodigoEdit"
        android:layout_marginTop="80dp"
        android:text="@string/cantidad"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtcodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@+id/view1"
        android:layout_marginTop="15dp"
        android:text="@string/codigo"
        android:textSize="17sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        style="@style/Separator"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtcodigo"
        android:layout_below="@+id/etcodigoEdit"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/etcantidadEdit"
        android:text="@string/descripcion"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etcodigoEdit"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvDescripcionEdit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tvDescripcion"
            android:textColor="#696969"
            android:textSize="17sp" />
    </LinearLayout>
</RelativeLayout>
 </ScrollView>
